@@ -1,12 +1,7 @@
 {
-  "count": 9,
-  "uniques": 8,
+  "count": 2,
+  "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2025-02-02T00:00:00Z",
-      "count": 7,
-      "uniques": 6
-    },
     {
       "timestamp": "2025-02-03T00:00:00Z",
       "count": 2,
